--- a/style/_videos.scss
+++ b/style/_videos.scss
@@ -24,7 +24,7 @@
     h2 {
         text-align: center;
         a {
-            font-family: "Verdana", "Geneva", sans-serif;
+            font-family: Trebuchet MS, sans-serif;
             font-size: clamp(2rem, 2vw, 4rem);
             color: $naranja;
             font-weight: bold;
