--- a/style/_global.scss
+++ b/style/_global.scss
@@ -20,20 +20,38 @@ html {
     scroll-behavior: smooth;
 }
 
+@mixin text{
+    font-size: clamp(1.5rem, 2vw, 4rem);
+    font-family: "Verdana", "Geneva", sans-serif;
+    max-width: 90vw;
+    color:white;
+    margin: 30px 40px;
+    text-align: center;
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
+
+@mixin title{
+    font-family: Trebuchet MS, sans-serif;
+    font-size: clamp(2.5rem, 2vw, 5rem);
+    color: $naranja;
+    text-align: center;
+    height: auto;
+    font-weight: bold;
+    margin: 10px auto;
+    &:hover {
+        transition: color 2s ease;
+        color: $naranja2;
+    }
+}
+
 body {
     background-color: $fondo;
     margin: 2vh 2vw;
     height: 100%;
     align-items: center;
     p {
-            font-size: clamp(1.5rem, 2vw, 4rem);
-            font-family: "Verdana", "Geneva", sans-serif;
-            max-width: 90vw;
-            color:white;
-            margin: 30px 40px;
-            text-align: center;
-            overflow-wrap: break-word;
-            word-break: break-word;
+        @include text;
     }
 }
 
@@ -86,7 +104,7 @@ hr {
 }
 
 nav {
-    width: 90%;
+    width: 100%;
     margin: 5px auto;
     background-color: $fondo;
     .navbar-toggler {
@@ -208,13 +226,12 @@ nav {
         nav {
             #navbarContent {
                 .navbar-nav {
-                    flex-direction: column !important;
+                    flex-direction: column;
                     flex-flow: column;
                     align-items: center;
                     justify-items: center;
                     line-height: 0;
                     margin: 10px auto;
-
                 }
             }
         }
