--- a/style/_scotty.scss
+++ b/style/_scotty.scss
@@ -45,7 +45,7 @@
         font-style: italic;
     }
     .scottyH2 {
-        @extend p ;
+        @include text;
         b {
             font-size: clamp(2.5rem, 2vw, 4rem);
         }
