--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@ body {
   height: 100%;
   align-items: center;
 }
-body p, body .indexTexto2 h2, .indexTexto2 body h2, body .mainGrid h3, .mainGrid body h3, body .scottyT1 .scottyH2, body .scottyT3 .scottyH2, body .scottyT2 .scottyH2, .scottyT1 body .scottyH2, .scottyT3 body .scottyH2, .scottyT2 body .scottyH2, body .programText h2, .programText body h2, body .programText p, .programText body p, body .aboutTexto h2, .aboutTexto body h2, body .aboutTexto p, .aboutTexto body p {
+body p {
   font-size: clamp(1.5rem, 2vw, 4rem);
   font-family: "Verdana", "Geneva", sans-serif;
   max-width: 90vw;
@@ -77,7 +77,7 @@ hr {
 }
 
 nav {
-  width: 90%;
+  width: 100%;
   margin: 5px auto;
   background-color: #000000;
 }
@@ -145,7 +145,7 @@ nav .navbar-toggler {
     margin: 2vh 2vw;
     height: 100%;
   }
-  body p, body .indexTexto2 h2, .indexTexto2 body h2, body .mainGrid h3, .mainGrid body h3, body .scottyT1 .scottyH2, body .scottyT3 .scottyH2, body .scottyT2 .scottyH2, .scottyT1 body .scottyH2, .scottyT3 body .scottyH2, .scottyT2 body .scottyH2, body .programText h2, .programText body h2, body .programText p, .programText body p, body .aboutTexto h2, .aboutTexto body h2, body .aboutTexto p, .aboutTexto body p {
+  body p {
     font-size: clamp(2rem, 2vw, 3.5rem);
     margin: 20px 30px;
   }
@@ -177,7 +177,7 @@ nav .navbar-toggler {
   nav {
     margin: 10px auto;
   }
-  p, .indexTexto2 h2, .mainGrid h3, .scottyT1 .scottyH2, .scottyT3 .scottyH2, .scottyT2 .scottyH2, .programText h2, .programText p, .aboutTexto h2, .aboutTexto p {
+  p {
     font-size: clamp(1.5rem, 2vw, 4rem);
   }
   .footer a img {
@@ -186,7 +186,7 @@ nav .navbar-toggler {
 }
 @media (max-width: 991px) {
   body nav #navbarContent .navbar-nav {
-    flex-direction: column !important;
+    flex-direction: column;
     flex-flow: column;
     align-items: center;
     justify-items: center;
@@ -222,7 +222,7 @@ nav .navbar-toggler {
     margin: 2vh 4vw;
     height: 100%;
   }
-  body p, body .indexTexto2 h2, .indexTexto2 body h2, body .mainGrid h3, .mainGrid body h3, body .scottyT1 .scottyH2, body .scottyT3 .scottyH2, body .scottyT2 .scottyH2, .scottyT1 body .scottyH2, .scottyT3 body .scottyH2, .scottyT2 body .scottyH2, body .programText h2, .programText body h2, body .programText p, .programText body p, body .aboutTexto h2, .aboutTexto body h2, body .aboutTexto p, .aboutTexto body p {
+  body p {
     font-size: calc(0.75em + 1vmin);
     margin: 20px 15px;
   }
@@ -270,7 +270,7 @@ nav .navbar-toggler {
     margin: 2vh 2vw;
     height: 100%;
   }
-  body p, body .indexTexto2 h2, .indexTexto2 body h2, body .mainGrid h3, .mainGrid body h3, body .scottyT1 .scottyH2, body .scottyT3 .scottyH2, body .scottyT2 .scottyH2, .scottyT1 body .scottyH2, .scottyT3 body .scottyH2, .scottyT2 body .scottyH2, body .programText h2, .programText body h2, body .programText p, .programText body p, body .aboutTexto h2, .aboutTexto body h2, body .aboutTexto p, .aboutTexto body p {
+  body p {
     font-size: calc(0.75em + 1vmin);
     margin: 15px;
   }
@@ -339,9 +339,16 @@ nav .navbar-toggler {
   padding: 20px;
   letter-spacing: 0.1em;
 }
-.caption404 p, .caption404 .indexTexto2 h2, .indexTexto2 .caption404 h2, .caption404 .mainGrid h3, .mainGrid .caption404 h3, .caption404 .scottyT1 .scottyH2, .caption404 .scottyT3 .scottyH2, .caption404 .scottyT2 .scottyH2, .scottyT1 .caption404 .scottyH2, .scottyT3 .caption404 .scottyH2, .scottyT2 .caption404 .scottyH2, .caption404 .programText h2, .programText .caption404 h2, .caption404 .aboutTexto h2, .aboutTexto .caption404 h2 {
+.caption404 p {
+  font-size: clamp(1.5rem, 2vw, 4rem);
+  font-family: "Verdana", "Geneva", sans-serif;
+  max-width: 90vw;
+  color: white;
+  margin: 30px 40px;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
   max-width: 80vw;
-  font-size: clamp(2rem, 2vh, 4rem);
 }
 
 .hr2 {
@@ -356,7 +363,7 @@ nav .navbar-toggler {
   .title404 {
     font-size: calc(1.5em + 1vmin);
   }
-  .caption404 p, .caption404 .indexTexto2 h2, .indexTexto2 .caption404 h2, .caption404 .mainGrid h3, .mainGrid .caption404 h3, .caption404 .scottyT1 .scottyH2, .caption404 .scottyT3 .scottyH2, .caption404 .scottyT2 .scottyH2, .scottyT1 .caption404 .scottyH2, .scottyT3 .caption404 .scottyH2, .scottyT2 .caption404 .scottyH2, .caption404 .programText h2, .programText .caption404 h2, .caption404 .aboutTexto h2, .aboutTexto .caption404 h2 {
+  .caption404 p {
     font-size: calc(1em + 1vmin);
   }
   .title404 {
@@ -397,7 +404,7 @@ nav .navbar-toggler {
   text-align: center;
   height: auto;
   font-weight: bold;
-  margin: 10px;
+  margin: 10px auto;
 }
 .aboutTitle:hover {
   transition: color 2s ease;
@@ -431,12 +438,30 @@ nav .navbar-toggler {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: clamp(1.5rem, 2vw, 4rem);
+  font-family: "Verdana", "Geneva", sans-serif;
+  max-width: 90vw;
+  color: white;
+  margin: 30px 40px;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 .aboutTexto hr {
   margin: 15px auto;
   width: 80%;
   height: 2px;
   border: none;
+}
+.aboutTexto h2 {
+  font-size: clamp(1.5rem, 2vw, 4rem);
+  font-family: "Verdana", "Geneva", sans-serif;
+  max-width: 90vw;
+  color: white;
+  margin: 30px 40px;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 .aboutTexto h2 span {
   font-size: calc(1.1em + 1vmin);
@@ -543,6 +568,16 @@ nav .navbar-toggler {
   height: 2px;
   border: none;
 }
+.programText h2 {
+  font-size: clamp(1.5rem, 2vw, 4rem);
+  font-family: "Verdana", "Geneva", sans-serif;
+  max-width: 90vw;
+  color: white;
+  margin: 30px 40px;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
 .programText h2 .programTitle {
   font-size: clamp(2rem, 2vw, 4rem);
   font-style: italic;
@@ -554,15 +589,18 @@ nav .navbar-toggler {
 
 .tableTitle {
   grid-area: tableTitle;
-  font-size: clamp(2.5rem, 3vh, 5rem);
+  font-family: Trebuchet MS, sans-serif;
+  font-size: clamp(2.5rem, 2vw, 5rem);
   color: #ffc107;
-  margin: 0px auto 25px auto;
   text-align: center;
+  height: auto;
   font-weight: bold;
+  margin: 10px auto;
+  margin: 0px auto 25px auto;
   text-decoration: underline;
 }
 .tableTitle:hover {
-  transition: color ease-in-out;
+  transition: color 2s ease;
   color: #896805;
 }
 
@@ -678,8 +716,18 @@ nav .navbar-toggler {
   height: auto;
   align-items: center;
 }
-.scottyT1 p, .scottyT1 .indexTexto2 h2, .indexTexto2 .scottyT1 h2, .scottyT1 .mainGrid h3, .mainGrid .scottyT1 h3, .scottyT3 p, .scottyT3 .indexTexto2 h2, .indexTexto2 .scottyT3 h2, .scottyT3 .mainGrid h3, .mainGrid .scottyT3 h3, .scottyT2 p, .scottyT2 .indexTexto2 h2, .indexTexto2 .scottyT2 h2, .scottyT2 .mainGrid h3, .mainGrid .scottyT2 h3, .scottyT1 .scottyH2, .scottyT3 .scottyH2, .scottyT2 .scottyH2, .scottyT1 .aboutTexto h2, .scottyT3 .aboutTexto h2, .scottyT2 .aboutTexto h2, .aboutTexto .scottyT1 h2, .aboutTexto .scottyT3 h2, .aboutTexto .scottyT2 h2, .scottyT1 .programText h2, .scottyT3 .programText h2, .scottyT2 .programText h2, .programText .scottyT1 h2, .programText .scottyT3 h2, .programText .scottyT2 h2 {
+.scottyT1 p, .scottyT3 p, .scottyT2 p {
   font-style: italic;
+}
+.scottyT1 .scottyH2, .scottyT3 .scottyH2, .scottyT2 .scottyH2 {
+  font-size: clamp(1.5rem, 2vw, 4rem);
+  font-family: "Verdana", "Geneva", sans-serif;
+  max-width: 90vw;
+  color: white;
+  margin: 30px 40px;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 .scottyT1 .scottyH2 b, .scottyT3 .scottyH2 b, .scottyT2 .scottyH2 b {
   font-size: clamp(2.5rem, 2vw, 4rem);
@@ -745,7 +793,7 @@ nav .navbar-toggler {
 }
 
 @media (max-width: 1024px) {
-  .scottyT1 p, .scottyT1 .indexTexto2 h2, .indexTexto2 .scottyT1 h2, .scottyT1 .mainGrid h3, .mainGrid .scottyT1 h3, .scottyT2 p, .scottyT2 .indexTexto2 h2, .indexTexto2 .scottyT2 h2, .scottyT2 .mainGrid h3, .mainGrid .scottyT2 h3, .scottyT3 p, .scottyT3 .indexTexto2 h2, .indexTexto2 .scottyT3 h2, .scottyT3 .mainGrid h3, .mainGrid .scottyT3 h3, .scottyT1 .aboutTexto h2, .aboutTexto .scottyT1 h2, .scottyT2 .aboutTexto h2, .aboutTexto .scottyT2 h2, .scottyT3 .aboutTexto h2, .aboutTexto .scottyT3 h2, .scottyT1 .programText h2, .programText .scottyT1 h2, .scottyT2 .programText h2, .programText .scottyT2 h2, .scottyT3 .programText h2, .programText .scottyT3 h2, .scottyT1 .scottyH2, .scottyT2 .scottyH2, .scottyT3 .scottyH2 {
+  .scottyT1 p, .scottyT2 p, .scottyT3 p {
     font-size: calc(1em + 1vmin);
   }
   .scottyT1 .scottyH2 b, .scottyT2 .scottyH2 b, .scottyT3 .scottyH2 b {
@@ -789,7 +837,7 @@ nav .navbar-toggler {
   text-align: center;
 }
 .videoT1 h2 a, .videoT3 h2 a, .videoT2 h2 a {
-  font-family: "Verdana", "Geneva", sans-serif;
+  font-family: Trebuchet MS, sans-serif;
   font-size: clamp(2rem, 2vw, 4rem);
   color: #ffc107;
   font-weight: bold;
@@ -838,7 +886,7 @@ nav .navbar-toggler {
 .videoT3 {
   grid-area: videoT3;
 }
-.videoT3 p a span, .videoT3 .indexTexto2 h2 a span, .indexTexto2 .videoT3 h2 a span, .videoT3 .mainGrid h3 a span, .mainGrid .videoT3 h3 a span, .videoT3 .aboutTexto h2 a span, .aboutTexto .videoT3 h2 a span, .videoT3 .programText h2 a span, .programText .videoT3 h2 a span, .videoT3 .scottyT1 .scottyH2 a span, .scottyT1 .videoT3 .scottyH2 a span, .videoT3 .scottyT2 .scottyH2 a span, .scottyT2 .videoT3 .scottyH2 a span, .videoT3 .scottyT3 .scottyH2 a span, .scottyT3 .videoT3 .scottyH2 a span {
+.videoT3 p a span {
   font-style: italic;
 }
 
@@ -897,6 +945,149 @@ nav .navbar-toggler {
     margin: 10px auto;
   }
 }
+/*Styling of the Contact subpage*/
+.contactGrid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-auto-rows: auto;
+  gap: 5px;
+  margin: 20px;
+  overflow-wrap: break-word;
+  grid-template-areas: "header" "contactText" "formContainer" "hr" "footer";
+}
+
+.header {
+  grid-area: header;
+  margin: 10px auto;
+}
+
+.contactText {
+  grid-area: contactText;
+  padding: 5px;
+  margin: 10px;
+}
+.contactText h2 {
+  font-size: clamp(1.5rem, 2vw, 4rem);
+  font-family: "Verdana", "Geneva", sans-serif;
+  max-width: 90vw;
+  color: white;
+  margin: 30px 40px;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  margin: 0px auto;
+  line-height: 5rem;
+}
+.contactText h3 {
+  font-family: Trebuchet MS, sans-serif;
+  font-size: clamp(2.5rem, 2vw, 5rem);
+  color: #ffc107;
+  text-align: center;
+  height: auto;
+  font-weight: bold;
+  margin: 10px auto;
+  margin: 20px auto 40px;
+}
+.contactText h3:hover {
+  transition: color 2s ease;
+  color: #896805;
+}
+
+.formContainer {
+  grid-area: formContainer;
+}
+.formContainer .contactForm form {
+  width: 80%;
+  margin: 10px auto;
+  border: 4px solid transparent;
+  border-image: linear-gradient(to left, #ffc107, #dc3545);
+  border-image-slice: 1;
+  padding: 10px 20px;
+  background-color: #000000;
+}
+.formContainer .contactForm form label {
+  color: white;
+}
+.formContainer .contactForm form div {
+  margin: 1.5rem auto;
+}
+.formContainer .contactForm form div input, .formContainer .contactForm form div textarea {
+  background-color: #000000;
+  color: white;
+}
+.formContainer .contactForm form button {
+  margin: 15px auto;
+}
+.formContainer .contactDisclaimer {
+  width: 60%;
+  margin: 5px auto;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+.formContainer .contactDisclaimer span {
+  color: white;
+  width: 80%;
+}
+.formContainer .contactDisclaimer span a {
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.5s ease;
+}
+.formContainer .contactDisclaimer span a:hover {
+  color: #dc3545;
+}
+.formContainer:focus-within .contactDisclaimer {
+  opacity: 1;
+}
+
+.hr {
+  grid-area: hr;
+}
+
+.footer {
+  grid-area: footer;
+}
+
+@media (max-width: 1024px) {
+  .contactText h2 {
+    line-height: 4rem;
+  }
+  .contactText h3 {
+    margin: 15px auto 30px;
+  }
+  .formContainer .contactForm {
+    width: 100%;
+    padding: 10px;
+    margin: 10px auto;
+  }
+  .formContainer .contactForm form {
+    width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  .contactText h2 {
+    line-height: 3rem;
+  }
+  .contactText h3 {
+    margin: 10px auto 20px;
+  }
+  .formContainer .contactForm {
+    width: 100%;
+    padding: 10px;
+  }
+  .formContainer .contactForm form {
+    width: 100%;
+  }
+  .formContainer .contactDisclaimer span {
+    width: 100%;
+  }
+  .formContainer .contactDisclaimer span a {
+    margin: 0px auto;
+    word-break: break-all;
+  }
+}
 /*Styling of the Main webpage*/
 .indexGrid {
   display: grid;
@@ -945,6 +1136,17 @@ nav .navbar-toggler {
 .mainGrid .indexTexto1 {
   grid-area: indexTexto1;
 }
+.mainGrid .indexTexto1 h3 {
+  font-size: clamp(1.5rem, 2vw, 4rem);
+  font-family: "Verdana", "Geneva", sans-serif;
+  max-width: 90vw;
+  color: white;
+  margin: 30px 40px;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
 .hr1 {
   grid-area: hr1;
 }
@@ -956,16 +1158,24 @@ nav .navbar-toggler {
   height: auto;
   overflow: visible;
 }
-.indexTexto2 p a, .indexTexto2 h2 a, .indexTexto2 .scottyT1 .scottyH2 a, .scottyT1 .indexTexto2 .scottyH2 a, .indexTexto2 .scottyT2 .scottyH2 a, .scottyT2 .indexTexto2 .scottyH2 a, .indexTexto2 .scottyT3 .scottyH2 a, .scottyT3 .indexTexto2 .scottyH2 a, .indexTexto2 .mainGrid h3 a, .mainGrid .indexTexto2 h3 a {
+.indexTexto2 p a {
   text-decoration: none;
   display: inline-block;
   transition: all 0.5s ease;
 }
-.indexTexto2 p a:hover, .indexTexto2 h2 a:hover, .indexTexto2 .scottyT1 .scottyH2 a:hover, .scottyT1 .indexTexto2 .scottyH2 a:hover, .indexTexto2 .scottyT2 .scottyH2 a:hover, .scottyT2 .indexTexto2 .scottyH2 a:hover, .indexTexto2 .scottyT3 .scottyH2 a:hover, .scottyT3 .indexTexto2 .scottyH2 a:hover, .indexTexto2 .mainGrid h3 a:hover, .mainGrid .indexTexto2 h3 a:hover {
+.indexTexto2 p a:hover {
   color: #dc3545;
 }
 .indexTexto2 h2 {
   display: inline;
+  font-size: clamp(1.5rem, 2vw, 4rem);
+  font-family: "Verdana", "Geneva", sans-serif;
+  max-width: 90vw;
+  color: white;
+  margin: 30px 40px;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 
 .hr2 {
@@ -981,7 +1191,7 @@ nav .navbar-toggler {
   .indexGrid {
     margin: 5px;
   }
-  .indexGrid p, .indexGrid .aboutTexto h2, .aboutTexto .indexGrid h2, .indexGrid .programText h2, .programText .indexGrid h2, .indexGrid .scottyT1 .scottyH2, .scottyT1 .indexGrid .scottyH2, .indexGrid .scottyT2 .scottyH2, .scottyT2 .indexGrid .scottyH2, .indexGrid .scottyT3 .scottyH2, .scottyT3 .indexGrid .scottyH2, .indexGrid .mainGrid h3, .mainGrid .indexGrid h3, .indexGrid .indexTexto2 h2, .indexTexto2 .indexGrid h2 {
+  .indexGrid p {
     font-size: calc(0.75em + 1vmin);
   }
   .mainGrid {
@@ -1008,7 +1218,7 @@ nav .navbar-toggler {
     margin: 10px auto;
     justify-content: center;
   }
-  .mainGrid .titleContainer p, .mainGrid .titleContainer .aboutTexto h2, .aboutTexto .mainGrid .titleContainer h2, .mainGrid .titleContainer .programText h2, .programText .mainGrid .titleContainer h2, .mainGrid .titleContainer .scottyT1 .scottyH2, .scottyT1 .mainGrid .titleContainer .scottyH2, .mainGrid .titleContainer .scottyT2 .scottyH2, .scottyT2 .mainGrid .titleContainer .scottyH2, .mainGrid .titleContainer .scottyT3 .scottyH2, .scottyT3 .mainGrid .titleContainer .scottyH2, .mainGrid .titleContainer h3, .mainGrid .titleContainer .indexTexto2 h2, .indexTexto2 .mainGrid .titleContainer h2 {
+  .mainGrid .titleContainer p {
     font-weight: bold;
     color: #dc3545;
     font-weight: bold;
@@ -1019,7 +1229,7 @@ nav .navbar-toggler {
     grid-area: indexTexto1;
     overflow: visible;
   }
-  .mainGrid .indexTexto1 .textContainer p, .mainGrid .indexTexto1 .textContainer .aboutTexto h2, .aboutTexto .mainGrid .indexTexto1 .textContainer h2, .mainGrid .indexTexto1 .textContainer .programText h2, .programText .mainGrid .indexTexto1 .textContainer h2, .mainGrid .indexTexto1 .textContainer .scottyT1 .scottyH2, .scottyT1 .mainGrid .indexTexto1 .textContainer .scottyH2, .mainGrid .indexTexto1 .textContainer .scottyT2 .scottyH2, .scottyT2 .mainGrid .indexTexto1 .textContainer .scottyH2, .mainGrid .indexTexto1 .textContainer .scottyT3 .scottyH2, .scottyT3 .mainGrid .indexTexto1 .textContainer .scottyH2, .mainGrid .indexTexto1 .textContainer h3, .mainGrid .indexTexto1 .textContainer .indexTexto2 h2, .indexTexto2 .mainGrid .indexTexto1 .textContainer h2 {
+  .mainGrid .indexTexto1 .textContainer p {
     line-height: 1.5;
     margin-bottom: 10px;
   }
