--- a/style/style.scss
+++ b/style/style.scss
@@ -6,6 +6,7 @@
 @import "program";
 @import "scotty";
 @import "videos";
+@import "contact";
 
 /*Styling of the Main webpage*/
 
@@ -54,10 +55,10 @@
             text-align: center;
         }
     .indexTexto1 { grid-area: indexTexto1;
-        }
         h3 {
-            @extend p
-        }
+            @include text;
+        }    
+    }
 }
 .hr1 { grid-area: hr1; }
 .indexTexto2 { grid-area: indexTexto2; 
@@ -77,7 +78,7 @@
     }
     h2 {
         display: inline;
-        @extend p ;
+        @include text;
     }
 }
 .hr2 { grid-area: hr2; }
