--- a/style/_contact.scss
+++ b/style/_contact.scss
@@ -2,12 +2,7 @@
 
 .contactGrid {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-auto-rows: auto;
-    gap: 5px;
-    margin: 20px;
-    overflow-wrap: break-word;
+    @include grid;
     grid-template-areas:
         "header"
         "contactText"
