--- a/style/_page404.scss
+++ b/style/_page404.scss
@@ -1,12 +1,7 @@
 /*404 Page Styling*/
 
 .grid404 {  display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-auto-rows: auto;
-    gap: 5px;
-    margin: 20px;
-    overflow-wrap: break-word;
+    @include grid;
     grid-template-areas:
         "header"
         "title404"
