--- a/style/_videos.scss
+++ b/style/_videos.scss
@@ -1,11 +1,7 @@
 /*Styling of the Videos webpage*/
 
 .videosGrid {  display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    gap: 5px;
-    margin: 20px;
-    overflow-wrap: break-word;
+    @include grid;
     grid-template-areas:
         "header"
         "videoT1"
