--- a/style/style.css
+++ b/style/style.css
@@ -286,7 +286,9 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px;
+  margin: 20px auto;
+  padding: 0px 10px;
+  width: 100%;
   overflow-wrap: break-word;
   grid-template-areas: "header" "title404" "hr1" "scotty404" "caption404" "hr2" "footer";
 }
@@ -385,9 +387,12 @@ nav .navbar-toggler {
 .aboutGrid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto auto auto auto 1fr auto 1fr auto auto;
+  grid-template-rows: auto;
+  grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px;
+  margin: 20px auto;
+  padding: 0px 10px;
+  width: 100%;
   overflow-wrap: break-word;
   grid-template-areas: "header" "aboutTitle" "hr1" "aboutBanner" "hr2" "aboutTexto" "hr3" "aboutFoto2" "hr4" "footer";
 }
@@ -446,6 +451,8 @@ nav .navbar-toggler {
   text-align: center;
   overflow-wrap: break-word;
   word-break: break-word;
+  max-width: 100%;
+  margin: 0px auto;
 }
 .aboutTexto hr {
   margin: 15px auto;
@@ -520,9 +527,10 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px;
+  margin: 20px auto;
+  padding: 0px 10px;
+  width: 100%;
   overflow-wrap: break-word;
-  box-sizing: border-box;
   grid-template-areas: "header" "programCarousel" "hr2" "programText" "hr3" "tableTitle" "table" "hr4" "footer";
 }
 
@@ -681,9 +689,10 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px;
+  margin: 20px auto;
+  padding: 0px 10px;
+  width: 100%;
   overflow-wrap: break-word;
-  box-sizing: border-box;
   grid-template-areas: "header" "scottyI1" "hr1" "scottyT1" "hr2" "scottyT2" "hr3" "scottyCarousel" "hr4" "scottyT3" "hr5" "footer";
 }
 
@@ -820,8 +829,11 @@ nav .navbar-toggler {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
+  grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px;
+  margin: 20px auto;
+  padding: 0px 10px;
+  width: 100%;
   overflow-wrap: break-word;
   grid-template-areas: "header" "videoT1" "video1" "hr1" "videoT2" "video2" "hr2" "videoT3" "video3" "hr3" "footer";
 }
@@ -952,7 +964,9 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px;
+  margin: 20px auto;
+  padding: 0px 10px;
+  width: 100%;
   overflow-wrap: break-word;
   grid-template-areas: "header" "contactText" "formContainer" "hr" "footer";
 }
@@ -1095,7 +1109,9 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px;
+  margin: 20px auto;
+  padding: 0px 10px;
+  width: 100%;
   overflow-wrap: break-word;
   grid-template-areas: "header" "mainGrid" "hr1" "indexTexto2" "hr2" "footer";
 }
