--- a/style/_about.scss
+++ b/style/_about.scss
@@ -17,6 +17,7 @@
 .header { grid-area: header; }
 .aboutTitle { grid-area: aboutTitle;
     @include title;
+    margin: 30px auto 10px;
 }
 .hr1 { grid-area: hr1; }
 .aboutBanner { grid-area: aboutBanner;
@@ -24,7 +25,7 @@
     margin: auto;
     width: 90%;
     img {
-        transition: 2s ease;
+        transition: 2s linear;
         &:hover {
             transform: scale(1.15);
         }
@@ -40,13 +41,14 @@
     max-width: 100%;
     margin: 0px auto;
     hr {
-        margin: 15px auto;
+        margin: 40px auto;
         width: 80%;
         height: 2px;
         border: none;
     }
     h2 {
         @include text;
+        margin: 10px auto;
         span {
             font-size: calc(1.10em + 1vmin);
         }
