--- a/style/style.css
+++ b/style/style.css
@@ -72,8 +72,7 @@ hr {
   overflow-wrap: break-word;
 }
 .header hr {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin: 5px auto;
 }
 
 nav {
@@ -82,9 +81,21 @@ nav {
   background-color: #000000;
 }
 nav .navbar-toggler {
-  background-color: #000000;
-  border-color: #ffc107;
+  border: 2px solid transparent;
+  border-image: linear-gradient(to left, #ffc107, #dc3545);
+  border-image-slice: 1;
   margin: 10px auto;
+}
+nav .navbar-toggler .navbar-toggler-icon {
+  background-image: none;
+}
+nav .navbar-toggler .navbar-toggler-icon::before, nav .navbar-toggler .navbar-toggler-icon::after, nav .navbar-toggler .navbar-toggler-icon span {
+  display: block;
+  width: 22px;
+  height: 2px;
+  margin: 6px auto;
+  background-color: #896805;
+  content: "";
 }
 nav #navbarContent .navbar-nav {
   display: flex;
@@ -231,10 +242,10 @@ nav .navbar-toggler {
     margin: 20px 15px;
   }
   hr {
-    margin: 10px auto;
+    margin: 20px auto;
   }
   .header .headerImage {
-    margin: 20px auto;
+    margin: 50px auto;
     width: 100%;
   }
   .header .headerImage img {
@@ -243,17 +254,22 @@ nav .navbar-toggler {
   }
   .header h1 {
     font-size: clamp(2.5rem, 2vw, 5rem);
-    letter-spacing: 0.1em;
-    margin: 15px 0;
+    letter-spacing: 0.15em;
+    line-height: 1.5;
+    margin: 15px auto;
   }
   .header h2 {
     font-size: clamp(2rem, 2vw, 3.5rem);
-    letter-spacing: 0.1em;
-    margin-top: 15px;
-    margin-bottom: 30px;
+    letter-spacing: 0.15em;
+    line-height: 1.5;
+    margin-top: 25px;
+    margin-bottom: 40px;
   }
   .header hr {
     margin: 15px auto;
+  }
+  nav {
+    margin: 20px auto;
   }
   .footer figure a .footerLogo {
     transition: none;
@@ -409,7 +425,8 @@ nav .navbar-toggler {
   text-align: center;
   height: auto;
   font-weight: bold;
-  margin: 10px auto;
+  margin: 30px auto;
+  margin: 30px auto 10px;
 }
 .aboutTitle:hover {
   transition: color 2s ease;
@@ -427,7 +444,7 @@ nav .navbar-toggler {
   width: 90%;
 }
 .aboutBanner img, .aboutFoto2 img {
-  transition: 2s ease;
+  transition: 2s linear;
 }
 .aboutBanner img:hover, .aboutFoto2 img:hover {
   transform: scale(1.15);
@@ -455,7 +472,7 @@ nav .navbar-toggler {
   margin: 0px auto;
 }
 .aboutTexto hr {
-  margin: 15px auto;
+  margin: 40px auto;
   width: 80%;
   height: 2px;
   border: none;
@@ -469,6 +486,7 @@ nav .navbar-toggler {
   text-align: center;
   overflow-wrap: break-word;
   word-break: break-word;
+  margin: 10px auto;
 }
 .aboutTexto h2 span {
   font-size: calc(1.1em + 1vmin);
@@ -603,7 +621,7 @@ nav .navbar-toggler {
   text-align: center;
   height: auto;
   font-weight: bold;
-  margin: 10px auto;
+  margin: 30px auto;
   margin: 0px auto 25px auto;
   text-decoration: underline;
 }
@@ -1000,7 +1018,7 @@ nav .navbar-toggler {
   text-align: center;
   height: auto;
   font-weight: bold;
-  margin: 10px auto;
+  margin: 30px auto;
   margin: 20px auto 40px;
 }
 .contactText h3:hover {
