--- a/style/style.scss
+++ b/style/style.scss
@@ -144,4 +144,10 @@
         margin: 15px 20px;
         padding: 0;
     }
+    .indexTexto2 {
+        font-size: calc(0.75em + 1vmin);
+        h2 {
+            font-size: calc(1em + 1vmin);
+        }
+    }
 }
