--- a/style/_global.scss
+++ b/style/_global.scss
@@ -152,6 +152,9 @@ nav {
                     transform: scale(1.2);
                 }
             }
+            .nav-link.active {
+                color: $naranja2;
+            }
         }
     }
     .navbar-toggler {
@@ -317,13 +320,13 @@ nav {
             }
         }
         h1 {
-            font-size: clamp(2.5rem, 2vw, 5rem);
+            font-size: calc(3rem + 1vmin);
             letter-spacing: 0.15em;
             line-height: 1.5;
             margin: 15px auto;
         }
         h2 {
-            font-size: clamp(2rem, 2vw, 3.5rem);
+            font-size: calc(2rem + 1vmin);
             letter-spacing: 0.15em;
             line-height: 1.5;
             margin-top: 25px;
@@ -352,8 +355,6 @@ nav {
 
 @media (max-width: 300px) {
     body {
-        max-width: 300px;
-        min-width: 2500px;
         width: 100%;
         margin: 2vh 2vw;
         height: 100%;
