--- a/style/_scotty.scss
+++ b/style/_scotty.scss
@@ -19,7 +19,7 @@
 .header { grid-area: header; }
 .scottyI1 { grid-area: scottyI1;
     text-align: center;
-    margin: 20px auto;
+    margin: 40px auto 20px;
     img {
         max-width: 100%;
         height: auto;
@@ -105,10 +105,8 @@
 
 @media (max-width: 480px) {
     body {
-        box-sizing: border-box;
         width: 100%;
-        margin-left: 0;
-        margin-right: 0;
+        margin: 0 auto;
     }
     .scottyI1 {
         img {
