--- a/style/_scotty.scss
+++ b/style/_scotty.scss
@@ -103,6 +103,12 @@
     }
 }
 
+@media (max-width: 700px) {
+    .scottyI1 {
+        width: 80%;
+    }
+}
+
 @media (max-width: 480px) {
     body {
         width: 100%;
