--- a/style/_global.scss
+++ b/style/_global.scss
@@ -38,6 +38,7 @@ html {
     text-align: center;
     height: auto;
     font-weight: bold;
+    letter-spacing: 0.10em;
     margin: 30px auto;
     &:hover {
         transition: color 2s ease;
@@ -51,14 +52,15 @@ html {
     grid-auto-rows: auto;
     gap: 5px;
     margin: 20px auto;
-    padding: 0px 10px;
+    padding: 10px;
     width: 100%;
     overflow-wrap: break-word;
 }
 
 body {
     background-color: $fondo;
-    margin: 2vh 2vw;
+    margin: 1vh 1vw;
+    padding: 1vh 1vw;
     height: 100%;
     align-items: center;
     p {
@@ -80,7 +82,7 @@ hr {
     max-width: 100%;
     .headerImage {
         text-align: center;
-        margin: 30px auto;
+        margin: 20px auto;
         width: 60%;
         img {
             width: 100%;
@@ -95,7 +97,7 @@ hr {
         text-align: center;
         overflow-wrap: break-word;
         height: auto;
-        margin: 20px 0;
+        margin: 20px auto;
     }
     h2 {
         font-family: Trebuchet MS, sans-serif;
@@ -104,8 +106,7 @@ hr {
         color: $rojo-fuerte;
         font-style: italic;
         text-align: center;
-        margin-top: 15px;
-        margin-bottom: 30px;
+        margin: 15px auto 30px;
         overflow-wrap: break-word;
     }
     hr {
@@ -166,14 +167,15 @@ nav {
 }
 
 .footer {
-    display: flex;
+    display: block;
     justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
     text-align: center;
-    margin: 10px auto 20px auto;
+    width: 100%;
+    height: auto;
+    margin: 20px auto 30px;
+    padding: 10px;
     figure {
+        margin: 0 auto;
         a {
             color: $link;
             font-size: clamp(1rem, 2vw, 4rem);
@@ -340,6 +342,7 @@ nav {
         margin: 20px auto;
     }
     .footer {
+        margin: 20px auto;
         figure {
             a {
                 .footerLogo {
