--- a/style/_page404.scss
+++ b/style/_page404.scss
@@ -76,4 +76,11 @@
             }
         }
     }
+    .footer {
+        a {
+            img {
+                height: auto;
+            }
+        }        
+    }
 }
