--- a/style/_global.scss
+++ b/style/_global.scss
@@ -66,6 +66,9 @@ body {
     p {
         @include text;
     }
+    .container-fluid {
+        padding: 0px;
+    }
 }
 
 hr {
@@ -296,12 +299,10 @@ nav {
 
 @media (max-width: 480px) {
     body {
-        max-width: 480px;
-        min-width: 300px;
         margin: 2vh 4vw;
         height: 100%;
         p {
-            font-size: calc(0.75em + 1vmin);
+            font-size: calc(0.8em + 1vmin);
             margin: 20px 15px;
         }
         h2 {
@@ -359,7 +360,7 @@ nav {
 @media (max-width: 300px) {
     body {
         width: 100%;
-        margin: 2vh 2vw;
+        margin: 1vh 1vw;
         height: 100%;
         p {
             font-size: calc(0.75em + 1vmin);
