--- a/style/style.scss
+++ b/style/style.scss
@@ -52,7 +52,7 @@
     .indexTexto1 { grid-area: indexTexto1;
         h3 {
             @include text;
-        }    
+        }
     }
 }
 .hr1 { grid-area: hr1; }
@@ -60,7 +60,6 @@
     display: flex;
     flex-direction: column;
     height: auto;
-    overflow: visible;
     p {
         a {
             text-decoration: none;
@@ -85,7 +84,7 @@
     .indexGrid {
         margin: 5px;
         p {
-            font-size: calc(0.8em + 1vmin);
+            font-size: calc(1em + 1vmin);
         }
     }
     .mainGrid {
@@ -111,7 +110,7 @@
         }
         .titleContainer {
             grid-area: titleContainer;
-            margin: 10px auto;
+            margin: 40px auto 10px;
             justify-content: center;
             p {
                 font-weight: bold;
@@ -138,7 +137,10 @@
     body {
         max-width: 480px;
         min-width: 300px;
-        width: 100%
+        width: 100%;
+        p {
+            font-size: calc(1em + 1vmin);
+        }
     }
     .indexImagen {
         width: 100%;
