--- a/style/_global.scss
+++ b/style/_global.scss
@@ -77,6 +77,7 @@ hr {
     background: linear-gradient(to left, $naranja, $rojo);
     margin: 40px auto;
     border: none;
+    opacity: 0.8;
 }
 
 .header { 
