--- a/style/style.css
+++ b/style/style.css
@@ -311,7 +311,7 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 10px;
   width: 100%;
   overflow-wrap: break-word;
@@ -422,7 +422,7 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 10px;
   width: 100%;
   overflow-wrap: break-word;
@@ -570,7 +570,7 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 10px;
   width: 100%;
   overflow-wrap: break-word;
@@ -733,7 +733,7 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 10px;
   width: 100%;
   overflow-wrap: break-word;
@@ -882,7 +882,7 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 10px;
   width: 100%;
   overflow-wrap: break-word;
@@ -1015,7 +1015,7 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 10px;
   width: 100%;
   overflow-wrap: break-word;
@@ -1024,13 +1024,12 @@ nav .navbar-toggler {
 
 .header {
   grid-area: header;
-  margin: 10px auto;
 }
 
 .contactText {
   grid-area: contactText;
   padding: 5px;
-  margin: 5px;
+  margin: 10px 5px 10px;
 }
 .contactText h2 {
   font-size: clamp(1.5rem, 2vw, 4rem);
@@ -1181,7 +1180,7 @@ nav .navbar-toggler {
   grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 5px;
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 10px;
   width: 100%;
   overflow-wrap: break-word;
