--- a/style/_scotty.scss
+++ b/style/_scotty.scss
@@ -19,7 +19,7 @@
 .header { grid-area: header; }
 .scottyI1 { grid-area: scottyI1;
     text-align: center;
-    margin: 50px auto 20px;
+    margin: 20px auto;
     img {
         max-width: 100%;
         height: auto;
@@ -103,7 +103,7 @@
     }
     .scottyI1 {
         width: 80%;
-        margin: 40px auto 40px;
+        margin: 40px auto;
     }
 }
 
